# cbs3

./: .gitignore  README.md  pyproject.toml
src/cbs3/: __init__.py  _utils.py  bucket.py  client.py  config.py  credentials.py  errors.py  multipart.py
